--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Track</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
     <string name="e_mail">E-mail</string>
     <string name="password">Пароль</string>
     <string name="confirm_password">Повторить пароль</string>
@@ -10,4 +9,16 @@
     <string name="u_login"><u>Войти</u></string>
     <string name="first_name">Имя</string>
     <string name="last_name">Фамилиля</string>
+    <string name="main_screen">Главный экран</string>
+    <string name="reminder">Напоминание</string>
+    <string name="exit">Выход</string>
+    <string name="day">День</string>
+    <string name="month">Месяц</string>
+    <string name="time">Время</string>
+    <string name="cancel">Отмена</string>
+    <string name="create">Создать</string>
+    <string name="delete">Удалить</string>
+    <string name="edit">Изменить</string>
+    <string name="run_text">Пробежка</string>
+    <string name="title_activity_run">RunActivity</string>
 </resources>
